--- a/android-start/app/src/main/AndroidManifest.xml
+++ b/android-start/app/src/main/AndroidManifest.xml
@@ -8,15 +8,32 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.google.firebase.codelab.friendlychat.MainActivity">
+        <activity android:name="com.google.firebase.codelab.friendlychat.MainActivity" />
+        <activity android:name="com.google.firebase.codelab.friendlychat.SignInActivity" />
+        <activity
+            android:name="com.google.firebase.codelab.friendlychat.SplashActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.google.firebase.codelab.friendlychat.WorkActivity" />
 
-        <activity android:name=".SignInActivity" />
+        <service
+            android:name="com.google.firebase.codelab.friendlychat.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
+        <service
+            android:name=".MyFirebaseInstanceIdService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
 
     </application>
 
