--- a/android-start/app/src/main/AndroidManifest.xml
+++ b/android-start/app/src/main/AndroidManifest.xml
@@ -8,6 +8,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/myicon" />
+
         <activity android:name="com.google.firebase.codelab.friendlychat.MainActivity" />
         <activity android:name="com.google.firebase.codelab.friendlychat.SignInActivity" />
         <activity
