--- a/android-start/app/src/main/AndroidManifest.xml
+++ b/android-start/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
             android:resource="@drawable/myicon" />
 
         <activity android:name="com.google.firebase.codelab.friendlychat.MainActivity" />
+        <activity android:name="com.google.firebase.codelab.friendlychat.About" />
+        <activity android:name="com.google.firebase.codelab.friendlychat.Messages" />
         <activity android:name="com.google.firebase.codelab.friendlychat.SignInActivity" />
         <activity
             android:name="com.google.firebase.codelab.friendlychat.SplashActivity"
