--- a/android-start/app/build.gradle
+++ b/android-start/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 27
     buildToolsVersion '27.0.3'
 
     defaultConfig {
@@ -28,10 +28,10 @@ android {
 dependencies {
     testCompile 'junit:junit:4.12'
 
-    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:design:27.1.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:27.1.1'
 
     // Google
     compile 'com.google.android.gms:play-services-auth:11.6.0'
@@ -57,12 +57,14 @@ dependencies {
 
     compile 'com.loopj.android:android-async-http:1.4.9'
 
+    implementation "com.android.support:support-compat:27.1.1"
+
 
     // Testing dependencies
     androidTestCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
-    androidTestCompile 'com.android.support:support-annotations:25.3.1'
+    androidTestCompile 'com.android.support:support-annotations:27.1.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
