Support App Deep Linking from SMS message

--- a/android-start/app/src/main/AndroidManifest.xml
+++ b/android-start/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.google.firebase.codelab.friendlychat">
 
     <application
@@ -37,16 +38,28 @@
             </intent-filter>
         </activity>
         <activity android:name="com.google.firebase.codelab.friendlychat.BillSummary">
+            <tools:validation testUrl="http://247.notify.com/billReminder" />
+
             <intent-filter>
                 <action android:name="deep-link" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="http"
+                    android:host="247.notify.com"
+                    android:path="/billReminder" />
+            </intent-filter>
         </activity>
 
-        <service
-            android:name="com.google.firebase.codelab.friendlychat.MyFirebaseMessagingService">
+        <service android:name="com.google.firebase.codelab.friendlychat.MyFirebaseMessagingService">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
