--- a/android-start/app/build.gradle
+++ b/android-start/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 26
     buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "com.google.firebase.codelab.friendlychat"
         minSdkVersion 21
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -28,25 +28,25 @@ android {
 dependencies {
     testCompile 'junit:junit:4.12'
 
-    compile 'com.android.support:design:27.1.1'
+    compile 'com.android.support:design:26.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
-    compile 'com.android.support:appcompat-v7:27.1.1'
+    compile 'com.android.support:appcompat-v7:26.1.0'
 
     // Google
-    compile 'com.google.android.gms:play-services-auth:11.6.0'
+    compile 'com.google.android.gms:play-services-auth:16.0.1'
 
     // Firebase
-    compile 'com.google.firebase:firebase-analytics:11.6.0'
-    compile 'com.google.firebase:firebase-database:11.6.0'
-    compile 'com.google.firebase:firebase-storage:11.6.0'
-    compile 'com.google.firebase:firebase-auth:11.6.0'
-    compile 'com.google.firebase:firebase-config:11.6.0'
-    compile 'com.google.android.gms:play-services-appinvite:11.6.0'
-    compile 'com.google.firebase:firebase-messaging:11.6.0'
-    compile 'com.google.android.gms:play-services-ads:11.6.0'
-    compile 'com.google.firebase:firebase-crash:11.6.0'
-    compile 'com.google.firebase:firebase-appindexing:11.6.0'
+//    compile 'com.google.firebase:firebase-analytics:11.6.0'
+//    compile 'com.google.firebase:firebase-database:11.6.0'
+//    compile 'com.google.firebase:firebase-storage:11.6.0'
+//    compile 'com.google.firebase:firebase-auth:11.6.0'
+    compile 'com.google.firebase:firebase-config:16.1.0'
+    compile 'com.google.android.gms:play-services-appinvite:16.0.4'
+    compile 'com.google.firebase:firebase-messaging:17.3.4'
+//    compile 'com.google.android.gms:play-services-ads:17.0.0'
+    compile 'com.google.firebase:firebase-crash:16.2.1'
+    compile 'com.google.firebase:firebase-appindexing:16.0.2'
 
     // Firebase UI
     compile 'com.firebaseui:firebase-ui-database:1.2.0'
@@ -57,14 +57,14 @@ dependencies {
 
     compile 'com.loopj.android:android-async-http:1.4.9'
 
-    implementation "com.android.support:support-compat:27.1.1"
+    implementation "com.android.support:support-compat:26.1.0"
 
 
     // Testing dependencies
     androidTestCompile 'junit:junit:4.12'
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
-    androidTestCompile 'com.android.support.test:runner:0.5'
-    androidTestCompile 'com.android.support:support-annotations:27.1.1'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestCompile 'com.android.support.test:runner:1.0.2'
+    androidTestCompile 'com.android.support:support-annotations:28.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
